--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
   "name": "crash-course",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~52.0.23",
+    "expo-av": "^15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-document-picker": "^13.0.1",
+    "expo-file-system": "^18.0.6",
+    "expo-font": "~13.0.2",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.15",
     "expo-status-bar": "~2.0.0",
+    "expo-video": "~2.0.3",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-animatable": "^1.4.0",
+    "react-native-appwrite": "^0.5.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "react-native-webview": "^13.12.5",
+    "tailwindcss": "^3.4.17",
+    "expo-image-picker": "~16.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.3.12",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
